Correction orthographe + fond

--- a/competences.html
+++ b/competences.html
@@ -41,9 +41,9 @@
     </header>
 
     <main>
-        <section>
+        <section class="glass">
             <!-- ****************************************** SELECTION ****************************************** -->
-            <h3>Compétences</h3>
+            <h2>Compétences</h2>
             <ul id="selection">
                 <li id="button_transverse">
                     <img src="" alt="">
@@ -230,15 +230,15 @@
                     </li>
                 </ul>
             </article>
+            <a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant">Contactez moi</a>
         </section>
-        <a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant">Contactez moi</a>
     </main>
     
     <footer>
         <ul>
             <li><a href="mailto:benjamin.petel@outlook.com"><img src="img/email.svg"></a></li>
-            <li><a href="https://www.linkedin.com/in/benjamin-petel/"><img src="img/linkedin.svg"></a></li>
-            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com"><img src="img/github.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
+            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
     </footer>
 
