--- a/presentation.html
+++ b/presentation.html
@@ -40,30 +40,30 @@
     </header>
 
     <main>
-
-        <h2>Présentation</h2>
-        <article>
-            <img src="img/Identite_2021-2.jpg">
-            <p>
-                J’ai commencé ma carrière dans le conseil en ingénieurie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets
-                <br><br>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. Je suis une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6
-                <br><br>A cette fin, je suis à la recherche d’un stage de 4 mois à partir de septembre 2021.
-            </p>
-        </article>
-        <ul>
-            <li class="btn"><a href="img/CV_Benjamin_PETEL.pdf">CV</a></li>
-            <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
-            <li class="btn"><a href="img/CDA_HB.pdf">Programme Human Booster</a></li>
-            <li class="btn btnImportant"><a href="mailto:benjamin.petel@outlook.com">Contactez moi</a></li>
-        </ul>
-        
+        <section class="glass">
+            <h2>Présentation</h2>
+            <article>
+                <img src="img/Identite_2021-2.jpg">
+                <p>
+                    J’ai commencé ma carrière dans le conseil en ingénierie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets
+                    <br><br>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. Je suis une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6
+                    <br><br>A cette fin, je suis à la recherche d’un stage de 4 mois à partir de septembre 2021.
+                </p>
+            </article>
+            <ul>
+                <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
+                <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
+                <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Programme Human Booster</a></li>
+                <li><a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant" >Contactez moi</a></li>
+            </ul>
+        </section>
     </main>
 
     <footer>
         <ul>
             <li><a href="mailto:benjamin.petel@outlook.com"><img src="img/email.svg"></a></li>
-            <li><a href="https://www.linkedin.com/in/benjamin-petel/"><img src="img/linkedin.svg"></a></li>
-            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com"><img src="img/github.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
+            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
     </footer>
     
