--- a/valeurs.html
+++ b/valeurs.html
@@ -39,8 +39,8 @@
     </header>
 
     <main>
-        <h2>Valeurs</h2>
-        <section>
+        <section class="glass">
+            <h2>Valeurs</h2>
             <ul>
                 <li>
                     <img src="img/Initiateur_Apnee.jpg" alt="">
@@ -57,7 +57,7 @@
                 <li>
                     <img src="img/car_design.png" alt="">
                     <p><strong>Gestion du stress:</strong>
-                    <br>Habituer à travailler dans des environnements très exigeants
+                    <br>Habitué à travailler dans des environnements très exigeants
                     </p>
                 </li>
                 <li>
@@ -67,16 +67,16 @@
                     </p>
                 </li>
             </ul>
+            <a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant">Contactez moi</a>
         </section>
-        <a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant">Contactez moi</a>
 
     </main>
 
     <footer>
         <ul>
             <li><a href="mailto:benjamin.petel@outlook.com"><img src="img/email.svg"></a></li>
-            <li><a href="https://www.linkedin.com/in/benjamin-petel/"><img src="img/linkedin.svg"></a></li>
-            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com"><img src="img/github.svg"></a></li>
+            <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
+            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
     </footer>
     
