Correction boutons + logo competences transverses

--- a/competences.html
+++ b/competences.html
@@ -46,7 +46,7 @@
             <h2>Compétences</h2>
             <ul id="selection">
                 <li id="button_transverse">
-                    <img src="" alt="">
+                    <img src="img/double-arrow.svg" alt="">
                     <p>Transverses</p>
                 </li>
                 <li id="button_java">
