--- a/competences.html
+++ b/competences.html
@@ -45,19 +45,19 @@
             <!-- ****************************************** SELECTION ****************************************** -->
             <h2>Compétences</h2>
             <ul id="selection">
-                <li id="button_transverse">
+                <li class="btn btnSelected" id="button_transverse">
                     <img src="img/double-arrow.svg" alt="">
                     <p>Transverses</p>
                 </li>
-                <li id="button_java">
+                <li class="btn" id="button_java">
                     <img src="img/java.svg" alt="Java Logo">
                     <p>JAVA</p>
                 </li>
-                <li id="button_back">
+                <li class="btn" id="button_back">
                     <img src="img/back-end.png" alt="hard-drive logo">
                     <p>Back-End</p>
                 </li>
-                <li id="button_front">
+                <li class="btn" id="button_front">
                     <img src="img/Front-end.png" alt="Front-End logo">
                     <p>Front-End</p>
                 </li>
