Correction du mail

--- a/valeurs.html
+++ b/valeurs.html
@@ -67,14 +67,14 @@
                     </p>
                 </li>
             </ul>
-            <a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant">Contactez moi</a>
+            <a href="" class="btn btnImportant button_mail">Contactez moi</a>
         </section>
 
     </main>
 
     <footer>
         <ul>
-            <li><a href="mailto:benjamin.petel@outlook.com"><img src="img/email.svg"></a></li>
+            <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
             <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
