--- a/presentation.html
+++ b/presentation.html
@@ -54,14 +54,14 @@
                 <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
                 <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
                 <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Programme Human Booster</a></li>
-                <li><a href="mailto:benjamin.petel@outlook.com" class="btn btnImportant" >Contactez moi</a></li>
+                <li><a href="" class="btn btnImportant button_mail">Contactez moi</a></li>
             </ul>
         </section>
     </main>
 
     <footer>
         <ul>
-            <li><a href="mailto:benjamin.petel@outlook.com"><img src="img/email.svg"></a></li>
+            <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
             <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
