--- a/competences.html
+++ b/competences.html
@@ -72,7 +72,7 @@
                     </li>
                     <li>
                         <img src="img/scrum.png">
-                        <p>Scrum</p>
+                        <p>Scrum PSM1</p>
                     </li>
                     <li>
                         <img src="img/uml.png" alt="">
