add script json+ld for referencement

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin PETEL</title>
 
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "Benjamin PETEL",
+            "url": "https://benjaminpetel.fr",
+            "description": "Developpeur d'application"
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Benjamin PETEL",
+            "image": "img/Identite_2021-2.jpg",
+            "jobTitle": "Developpeur d'application",
+            "url": "https://benjaminpetel.fr",
+            "description": "Developpeur d'application",
+            "adress": {
+                "@type": "PostalAdress",
+                "addressCountry": "France"
+                "addressLocality": "Vienne",
+                "addressRegion": "Rhone-Alpes",
+                "postalCode": "38200",
+            }
+        }
+    </script>
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
