fixed the navbar

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 </head>
 <body>
     
-    <nav class="navbar">
+    <nav>
         <a href="index.html" class="nav-logo"><img src="img/home.svg"></a>
         <ul class="nav-menu">
-            <li><a href="index.html" class="nav-link">Acceuil</a></li>
-            <li><a href="presentation.html" class="nav-link">Présentation</a></li>
+            <li><a href="#home" class="nav-link">Acceuil</a></li>
+            <li><a href="#presentation" class="nav-link">Présentation</a></li>
             <li><a href="competences.html" class="nav-link">Compétences</a></li>
             <li><a href="valeurs.html" class="nav-link">Valeurs</a></li>
         </ul>
@@ -74,7 +74,7 @@
         </section>
 
         <!-- PRESENTATION -->
-        <section class="glass">
+        <section id="presentation">
             <h2>Présentation</h2>
             <article>
                 <img src="img/Identite_2021-2.jpg">
