put all the presentation on the main page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     
     <nav>
-        <a href="index.html" class="nav-logo"><img src="img/home.svg"></a>
+        <a href="#home" class="nav-logo"><img src="img/home.svg"></a>
         <ul class="nav-menu">
             <li><a href="#home" class="nav-link">Acceuil</a></li>
             <li><a href="#presentation" class="nav-link">Présentation</a></li>
@@ -74,21 +74,21 @@
 
         <!-- PRESENTATION -->
         <section id="presentation">
-            <h2>Présentation</h2>
-            <article>
-                <img src="img/Identite_2021-2.jpg">
-                <p>
+            <div>
+                <h2>Présentation</h2>
+                <article>
+                    <img src="img/Identite_2021-2.jpg">
                     J’ai commencé ma carrière dans le conseil en ingénierie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets
                     <br><br>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. Je suis une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6
                     <br><br>A cette fin, je suis à la recherche d’un stage de 4 mois à partir de septembre 2021.
-                </p>
-            </article>
-            <ul>
-                <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
-                <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
-                <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Programme Human Booster</a></li>
-                <li><a href="" class="btn btnImportant button_mail">Contactez moi</a></li>
-            </ul>
+                </article>
+                <ul>
+                    <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
+                    <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
+                    <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Programme Human Booster</a></li>
+                    <li><a href="" class="btn btnImportant button_mail">Contactez moi</a></li>
+                </ul>
+            </div>
         </section>
 
         <!-- COMPETENCES -->
