--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
     <!-- JAVASCRIPT -->
     <script src="js/script.js" defer></script>
+    <script src="js/competences.js" defer></script>
+
 </head>
 <body>
     
@@ -54,7 +56,7 @@
         <ul class="nav-menu">
             <li><a href="#home" class="nav-link">Acceuil</a></li>
             <li><a href="#presentation" class="nav-link">Présentation</a></li>
-            <li><a href="competences.html" class="nav-link">Compétences</a></li>
+            <li><a href="#skills" class="nav-link">Compétences</a></li>
             <li><a href="valeurs.html" class="nav-link">Valeurs</a></li>
         </ul>
         <div class="hamburger">
@@ -91,8 +93,9 @@
             </div>
         </section>
 
-        <!-- COMPETENCES -->
-        <section class="glass">
+        <!-- skills -->
+        <section id="skills">
+            <div>
             <!-- ****************************************** SELECTION ****************************************** -->
             <h2>Compétences</h2>
             <ul id="selection">
@@ -282,6 +285,8 @@
                 </ul>
             </article>
             <a href="" class="btn btnImportant button_mail">Contactez moi</a>
+            </div>
+
         </section>
 
         <!-- VALEURS -->
