add the values to the index as single page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li><a href="#home" class="nav-link">Acceuil</a></li>
             <li><a href="#presentation" class="nav-link">Présentation</a></li>
             <li><a href="#skills" class="nav-link">Compétences</a></li>
-            <li><a href="valeurs.html" class="nav-link">Valeurs</a></li>
+            <li><a href="#values" class="nav-link">Valeurs</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <!-- skills -->
+        <!-- SKILLS -->
         <section id="skills">
             <div>
             <!-- ****************************************** SELECTION ****************************************** -->
@@ -289,36 +289,38 @@
 
         </section>
 
-        <!-- VALEURS -->
-        <section class="glass">
-            <h2>Valeurs</h2>
-            <ul>
-                <li>
-                    <img src="img/Initiateur_Apnee.jpg" alt="">
-                    <p><strong>Transmission:</strong>
-                    <br>Initiateur apnée
-                    </p>
-                </li>
-                <li>
-                    <img src="img/Competition.jpg" alt="">
-                    <p><strong>Compétition:</strong>
-                    <br>Compétiteur depuis toujours dans plusieurs disciplines
-                    </p>
-                </li>
-                <li>
-                    <img src="img/car_design.png" alt="">
-                    <p><strong>Gestion du stress:</strong>
-                    <br>Habitué à travailler dans des environnements très exigeants
-                    </p>
-                </li>
-                <li>
-                    <img src="img/Apnee_securite.jpg" alt="">
-                    <p><strong>Confiance / Equipe:</strong>
-                    <br>L'apnée et l'escalade sont 2 sports où la confiance dans l'équipe est primordiale
-                    </p>
-                </li>
-            </ul>
-            <a href="" class="btn btnImportant button_mail">Contactez moi</a>
+        <!-- VALUES -->
+        <section id="values">
+            <div>
+                <h2>Valeurs</h2>
+                <ul>
+                    <li>
+                        <img src="img/Initiateur_Apnee.jpg" alt="">
+                        <p><strong>Transmission:</strong>
+                        <br>Initiateur apnée
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/Competition.jpg" alt="">
+                        <p><strong>Compétition:</strong>
+                        <br>Compétiteur depuis toujours dans plusieurs disciplines
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/car_design.png" alt="">
+                        <p><strong>Gestion du stress:</strong>
+                        <br>Habitué à travailler dans des environnements très exigeants
+                        </p>
+                    </li>
+                    <li>
+                        <img src="img/Apnee_securite.jpg" alt="">
+                        <p><strong>Confiance / Equipe:</strong>
+                        <br>L'apnée et l'escalade sont 2 sports où la confiance dans l'équipe est primordiale
+                        </p>
+                    </li>
+                </ul>
+                <a href="" class="btn btnImportant button_mail">Contactez moi</a>
+            </div>
         </section>
     </main>
 
