--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <ul>
             <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
-            <li><a href="https://github.com/Benjamin-PETEL/benjaminpetel.com" target="_blank"><img src="img/github.svg"></a></li>
+            <li><a href="https://github.com/Benjamin-PETEL" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
     </footer>
 
