refactor: delete competence.js and clean up code in script.js

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
     <!-- JAVASCRIPT -->
     <script src="js/script.js" defer></script>
-    <script src="js/competences.js" defer></script>
 
 </head>
 <body>
@@ -99,26 +98,26 @@
             <!-- ****************************************** SELECTION ****************************************** -->
             <h2>Compétences</h2>
             <ul id="selection">
-                <li class="btn btnSelected" id="button_transverse">
+                <li class="btn btnSelected" id="transverse_button">
                     <img src="img/double-arrow.svg" alt="">
                     <p>Transverses</p>
                 </li>
-                <li class="btn" id="button_java">
+                <li class="btn" id="java_button">
                     <img src="img/java.svg" alt="Java Logo">
                     <p>JAVA</p>
                 </li>
-                <li class="btn" id="button_back">
+                <li class="btn" id="back_button">
                     <img src="img/back-end.png" alt="hard-drive logo">
                     <p>Back-End</p>
                 </li>
-                <li class="btn" id="button_front">
+                <li class="btn" id="front_button">
                     <img src="img/Front-end.png" alt="Front-End logo">
                     <p>Front-End</p>
                 </li>
             </ul>
 
             <!-- ****************************************** TRANSVERSE ****************************************** -->
-            <article id="transverse">
+            <article id="transverse_article">
                 <ul class="lign">
                     <li>
                         <img src="img/Union_Jack.svg">
@@ -164,7 +163,7 @@
             </article>
 
             <!-- ****************************************** JAVA ****************************************** -->
-            <article  id="java">
+            <article id="java_article">
                 <ul class="lign">
                     <li>
                         <img src="img/Java-ee.png" alt="Java EE Logo">
@@ -210,7 +209,7 @@
             </article>
 
             <!-- ****************************************** BACK END ****************************************** -->
-            <article id="backend">
+            <article id="back_article">
                 <h4>Languages</h4>
                 <ul>
                     <li>
@@ -256,7 +255,7 @@
             </article>
 
             <!-- ****************************************** FRONT END ****************************************** -->
-            <article id=frontend>
+            <article id=front_article>
                 <h4>Languages</h4>
                 <ul>
                     <li>
