--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 <h2>Présentation</h2>
                 <article>
                     <img src="img/Identite_2021-2.jpg">
-                    J’ai commencé ma carrière dans le conseil en ingénierie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets
-                    <br><br>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. Je suis une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6
-                    <br><br>A cette fin, je suis à la recherche d’un stage de 4 mois à partir de septembre 2021.
+                    <p>J’ai commencé ma carrière dans le conseil en ingénierie pour de grands groupes automobiles & aéronautiques. En 10 ans j’ai évolué depuis un poste de concepteur vers des postes de gestion de projets</p>
+                    <p>Attiré depuis longtemps par le développement, j’ai entamé en 2021 une reconversion professionnelle. J'ai suivi une formation à temps complet auprès de Human Booster afin d’obtenir un titre de concepteur/developpeur d’application RNCP niveau 6</p>
+                    <p>Suite à un stage de 4 mois, je suis à la recherche d'un poste à partir de Janvier 2022</p>
                 </article>
                 <ul>
                     <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
