style: better display of presentation buttons

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <ul>
                     <li><a href="img/CV_Benjamin_PETEL.pdf" target="_blank" class="btn">CV</a></li>
                     <!-- <li class="btn"><a href="http://">Dossier de compétences</a></li> -->
-                    <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Programme Human Booster</a></li>
+                    <li><a href="img/CDA_HB.pdf" target="_blank" class="btn">Formation</a></li>
                     <li><a href="" class="btn btnImportant button_mail">Contactez moi</a></li>
                 </ul>
             </div>
