feature: add buttons for javascript and php in the skill section

--- a/index.html
+++ b/index.html
@@ -98,21 +98,29 @@
             <!-- ****************************************** SELECTION ****************************************** -->
             <h2>Compétences</h2>
             <ul id="selection">
-                <li class="btn btnSelected" id="transverse_button">
+                <li class="btn btnSelected" id="transverse_button" title="Transverses">
                     <img src="img/double-arrow.svg" alt="">
-                    <p>Transverses</p>
+                    <!-- <p>Transverses</p> -->
                 </li>
-                <li class="btn" id="java_button">
+                <li class="btn" id="javascript_button" title="Javascript">
+                    <img src="img/node.png" alt="">
+                    <!-- <p>Transverses</p> -->
+                </li>
+                <li class="btn" id="java_button" title="Java">
                     <img src="img/java.svg" alt="Java Logo">
-                    <p>JAVA</p>
+                    <!-- <p>JAVA</p> -->
                 </li>
-                <li class="btn" id="back_button">
+                <li class="btn" id="php_button" title="PHP">
+                    <img src="img/php.svg" alt="">
+                    <!-- <p>JAVA</p> -->
+                </li>
+                <li class="btn" id="back_button" title="Back End">
                     <img src="img/back-end.png" alt="hard-drive logo">
-                    <p>Back-End</p>
+                    <!-- <p>Back-End</p> -->
                 </li>
-                <li class="btn" id="front_button">
+                <li class="btn" id="front_button" title="Front End">
                     <img src="img/Front-end.png" alt="Front-End logo">
-                    <p>Front-End</p>
+                    <!-- <p>Front-End</p> -->
                 </li>
             </ul>
 
