feat: add the javascript article to skills

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <!-- ****************************************** TRANSVERSE ****************************************** -->
             <article id="transverse_article">
-                <ul class="lign">
+                <ul>
                     <li>
                         <img src="img/Union_Jack.svg">
                         <p>Anglais</p>
@@ -139,8 +139,6 @@
                         <img src="img/uml.png" alt="">
                         <p>UML</p>
                     </li>
-                </ul>
-                <ul class="lign">
                     <li>
                         <img src="img/list.svg" alt="">
                         <p>Gestion de projet</p>
@@ -153,23 +151,42 @@
                         <img src="img/management.svg">
                         <p>Management</p>
                     </li>
-                </ul>
-                <ul class="lign">
                     <li>
-                        <img src="img/Autonomie.svg" >
-                        <p>Autonomie</p>
+                        <img src="img/Linux.png" >
+                        <p>Linux</p>
                     </li>
                     <li>
                         <img src="img/git.png" alt="git logo">
                         <p>Git</p>
                     </li>
                     <li>
-                        <img src="img/graduation-hat.svg" alt="graduation hat">
-                        <p>Autodidacte</p>
+                        <img src="img/continuous-integration.webp" alt="">
+                        <p>Intégration continue</p>
                     </li>
                 </ul>
             </article>
 
+            <!-- *************************************** Javascript *************************************** -->
+            <article id="javascript_article">
+                <ul>
+                    <li>
+                        <img src="img/JS.webp" alt="Javascipt">
+                        <p>Javascript</p>
+                    </li>
+                    <li>
+                        <img src="img/node.webp" alt="Node">
+                        <p>Node</p>
+                    </li>
+                    <li>
+                        <img src="img/jest.webp" alt="Jest">
+                        <p>Jest</p></li>
+                    </li>
+                    <li>
+                        <img src="img/mongoose.png" alt="Mongoose">
+                        <p>Mongoose</p></li>
+                    </li>
+                </ul>
+            </article>
             <!-- ****************************************** JAVA ****************************************** -->
             <article id="java_article">
                 <ul class="lign">
