feature: change the DB skills

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <img src="img/php.svg" alt="">
                     <!-- <p>JAVA</p> -->
                 </li>
-                <li class="btn" id="back_button" title="Back End">
-                    <img src="img/back-end.png" alt="hard-drive logo">
+                <li class="btn" id="db_button" title="Data Base">
+                    <img src="img/db.png" alt="Data Base Logo">
                     <!-- <p>Back-End</p> -->
                 </li>
                 <li class="btn" id="front_button" title="Front End">
@@ -221,41 +221,43 @@
                 </ul>
             </article>
 
-            <!-- ****************************************** BACK END ****************************************** -->
-            <article id="back_article">
-                <h4>Languages</h4>
+            <!-- ****************************************** PHP ******************************************* -->
+            <article id="php_article">
                 <ul>
                     <li>
-                        <img src="img/php.svg" alt="php logo">
+                        <img src="img/php.svg" alt="PHP Logo">
                         <p>PHP</p>
                     </li>
                     <li>
-                        <img src="img/sql.jpg">
-                        <p>SQL</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h4>BDD</h4>
-                        <ul>
-                            <li>
-                                <img src="img/MySQL.png" alt="">
-                                <p>MySQL</p>
-                            </li>
-                        </ul>
+                        <img src="img/Symfony.svg" alt="Symfony Logo">
+                        <p>Symfony</p>
                     </li>
                     <li>
-                        <h4>Frameworks</h4>
-                        <ul>
-                            <li>
-                                <img src="img/Symfony.svg" alt="Symfony logo">
-                                <p>Symfony</p>
-                            </li>
-                        </ul>
+                        <img src="img/doctrine.svg" alt="Doctrine Logo">
+                        <p>Doctrine</p>
+                    </li>
+                    <li>
+                        <img src="img/composer.png" alt="Composer Logo">
+                        <p>Composer</p>
                     </li>
                 </ul>
-                <h4>Interfaces</h4>
+            </article>
+
+            <!-- **************************************** BACK END **************************************** -->
+            <article id="db_article">
                 <ul>
+                    <li>
+                        <img src="img/mySQL.png" alt="MySQL logo">
+                        <p>MySQL</p>
+                    </li>
+                    <li>
+                        <img src="img/mariadb-vertical_white.svg">
+                        <p>MariaDB</p>
+                    </li>
+                    <li>
+                        <img src="img/MongoDB_Leaf_FullColor_RGB.svg" alt="MongoDB Logo">
+                        <p>MongoDB</p>
+                    </li>
                     <li>
                         <img src="img/phpmyadmin.png" alt="phpmyadmin logo">
                         <p>PHPMyAdmin</p>
