feature: update all skills

--- a/index.html
+++ b/index.html
@@ -271,7 +271,6 @@
 
             <!-- ****************************************** FRONT END ****************************************** -->
             <article id=front_article>
-                <h4>Languages</h4>
                 <ul>
                     <li>
                         <img src="img/html.svg" alt="html5 logo">
@@ -282,15 +281,12 @@
                         <p>CSS</p>
                     </li>
                     <li>
-                        <img src="img/JS.png" alt="javascript logo">
+                        <img src="img/JS.webp" alt="javascript logo">
                         <p>Javascript</p>
                     </li>
-                </ul>
-                <h4>Frameworks</h4>
-                <ul>
                     <li>
-                        <img src="img/electronJS.png" alt="electronJS logo">
-                        <p>electron JS</p>
+                        <img src="img/bootstrap.svg" alt="Bootstrap logo">
+                        <p>Bootstrap</p>
                     </li>
                     <li>
                         <img src="img/AngularJS.svg" alt="AngularJS logo">
@@ -340,7 +336,7 @@
 
     <footer>
         <ul>
-            <li><a href="" class="button_mail"><img src="img/email.svg"></a></li>
+            <li><a href="" class="button_mail"><img src="img/"></a></li>
             <li><a href="https://www.linkedin.com/in/benjamin-petel/" target="_blank"><img src="img/linkedin.svg"></a></li>
             <li><a href="https://github.com/Benjamin-PETEL" target="_blank"><img src="img/github.svg"></a></li>
         </ul>
